--- a/02-scripts.backup/MID_metadata_object.Rmd
+++ b/02-scripts.backup/MID_metadata_object.Rmd
@@ -74,7 +74,7 @@ full_metadata <- fread("./00-documentation.backup/kilteasheen_metadata.tsv") %>%
   full_join(., fread("./00-documentation.backup/radcliffe_pfuT_metadata.tsv")) %>%
   full_join(., fread("./00-documentation.backup/iberian_medieval_metadata.tsv")) %>%
   full_join(., fread("./00-documentation.backup/MID_analysis_metadata.tsv")) %>%
-  full_join(., fread("./00-documentation.backup/jae_metadata.tsv") %>%
+  full_join(., fread("./00-documentation.backup/mod_metadata.tsv") %>%
                        mutate(Sampled_teeth_FDI = as.character(Sampled_teeth_FDI)))
 
 full_metadata <- full_metadata %>%
@@ -82,7 +82,7 @@ full_metadata <- full_metadata %>%
   # remove the MID samples that have no metadata
   # filter(!str_detect(Library_ID, "MID025.A0101|MID033.A0101|MID056.A0101|MID065.A0101|MID068.A0101|MID076.A0101|MID078.A0101")) %>%
   mutate(Site = fct_relevel(Site, "Middenbeemster", "CMB", "Radcliffe", "Kilteasheen",
-                                   "ELR", "IVE","Jaen","Extraction_blank","Library_blank"),
+                                   "ELR", "IVE","Jaen","VLC","Extraction_blank","Library_blank"),
          Time_period = fct_relevel(Time_period, "Industrial","Medieval","Modern","Extraction_blank","Library_blank"),
          Region = fct_relevel(Region, "Netherlands","Spain","England", "Ireland","Iberia"),
          Periodontal_disease_present = fct_relevel(Periodontal_disease_present, "Yes","No","Unobservable","NR"),
@@ -127,7 +127,7 @@ kil_multiqc <- fread("~/projects1/microbiome_calculus/smoking_calculus/03-prepro
             gc_avg = mean(`%GC`))
 
 ibe_multiqc <- fread("~/projects1/microbiome_calculus/iberian/03-preprocessing/screening/eager2/multiqc/multiqc_data/multiqc_fastqc_1.txt") %>%
-  filter(str_detect(Sample, "ELR|IVE|EXB|LIB|JAE")) %>%
+  filter(str_detect(Sample, "ELR|IVE|EXB|LIB|JAE|VLC")) %>%
   mutate(Library_ID = str_trunc(Sample, width = 12, side = "right", ellipsis = "")) %>%
   select(Library_ID, avg_sequence_length, `%GC`) %>%
   group_by(Library_ID) %>%
@@ -200,10 +200,10 @@ full_metadata <- full_metadata %>%
 # lacroix_palette("PeachPear", n = 8, type = "continuous")
 # "#FF3200" "#EF8158" "#E9BD8E" "#CBDDA7" "#38BCAD" "#0B91B5" "#065FA3" "#172869"
 
-Site_colors <- c(Middenbeemster = "#311068", CMB = "#5A167E", Radcliffe = "#C83E73", Kilteasheen = "#E95562", ELR = "#FEA873",
-                      IVE = "#FED395", "Jaen" = "#41b6c4", Extraction_blank = "#252525", Library_blank = "#737373")
-Site_shapes <- c(Middenbeemster = 15, CMB = 16, Radcliffe = 17, Kilteasheen = 18, ELR = 25, IVE = 14, Jaen = 13, Extraction_blank = 4, Library_blank = 3)
-Site_size <- c(Middenbeemster = 4.5, CMB = 4, Radcliffe = 4, Kilteasheen = 6, ELR = 4, IVE = 4, Jaen = 4, Extraction_blank = 4, Library_blank = 4)
+Site_colors <- c(Middenbeemster = "#311068", CMB = "#7B2382FF", Radcliffe = "#C83E73", Kilteasheen = "#E95562", ELR = "#FEA873",
+                      IVE = "#FED395", Jaen = "#41b6c4", VLC = "#a0dae1", Extraction_blank = "#252525", Library_blank = "#737373")
+Site_shapes <- c(Middenbeemster = 15, CMB = 16, Radcliffe = 17, Kilteasheen = 18, ELR = 25, IVE = 14, Jaen = 13, VLC = 13, Extraction_blank = 4, Library_blank = 3)
+Site_size <- c(Middenbeemster = 4.5, CMB = 4, Radcliffe = 4, Kilteasheen = 6, ELR = 4, IVE = 4, Jaen = 4, VLC = 4, Extraction_blank = 4, Library_blank = 4)
 
 Time_period_colors <- c(Industrial = "#311068", Medieval = "#C83E73", Modern = "#41b6c4", Extraction_blank = "#252525", Library_blank = "#737373")
 Time_period_shapes <- c(Industrial = 19, Medieval = 17, Modern = 15, Extraction_blank = 4, Library_blank = 3)
