--- a/02-scripts.backup/MID_tax_horseshoe.Rmd
+++ b/02-scripts.backup/MID_tax_horseshoe.Rmd
@@ -325,15 +325,15 @@ heatmap_base <- ggplot(malt_otu_filt_pca_table_clr_long, aes(Species, Library_ID
   geom_tile() +
   scale_fill_viridis_c(option = "A") +
   theme_minimal(base_size = 7) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 0.95), # , color = vector_color
+  theme(axis.text.x = element_text(angle = 90, hjust = 1), # , color = vector_color
         plot.margin = margin(0, 0, 0, 0, "pt"),
         axis.title.y = element_blank(),
         legend.position = "left")
 
 heatmap_base
 
-ggsave("~/Desktop/heatmap_ordered.pdf", plot = heatmap_base, device = "pdf",
-       scale = 1, width = 12, height = 8, units = c("in"), dpi = 300)
+# ggsave("~/Desktop/heatmap_ordered.pdf", plot = heatmap_base, device = "pdf",
+#        scale = 1, width = 20, height = 9.5, units = c("in"), dpi = 300)
 
 ```
 
